<resources>
    <string name="app_name">ForexConverter</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_forex">ForexActivity</string>
    <string name="user_name">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="submit">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="remove">Remove</string>
	<string name="login">Login</string>
	<string name="exchange">Exchange</string>
	<string name="to">to</string>
	<string name="equals">=</string>
</resources>