<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="fill_vertical"
        android:height="35dp"
        android:maxHeight="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/rateCurrency"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_alignParentLeft="true" >
    </ListView>

    <TextView
        android:id="@+id/usdollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/exchange"
        android:layout_below="@+id/exchange"
        android:layout_marginTop="14dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="number"
        android:minWidth="10dp"
        android:width="50dp" >
        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/editText1"
        android:layout_toRightOf="@+id/editText1" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/spinner1"
        android:layout_toRightOf="@+id/textView2" />

    <Button
        android:id="@+id/exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/spinner2"
        android:layout_below="@+id/textView2"
        android:layout_marginRight="47dp"
        android:height="20sp"
        android:text="@string/exchange"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner1"
        android:layout_toRightOf="@+id/spinner1"
        android:text="@string/to"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exchange"
        android:layout_toRightOf="@+id/spinner2"
        android:text="@string/equals"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/exchange"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
